--- a/src/register.html
+++ b/src/register.html
@@ -33,8 +33,6 @@
                     <li class="nav-item">
                         <a class="nav-link text- fw-bold" href="../index.html"> تواصل معنا</a>
                     </li>
-
-
                 </ul>
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <a href="calculation.html">
@@ -42,6 +40,12 @@
                             <i class="fa-solid fa-calculator fa-2x text-success pointer"></i>
                             <a class="nav-link  mx-1 fw-bold" aria-current="page" href="calculation.html">احسب
                                 زكاتك</a>
+                        </li>
+                    </a>
+                    <a href="../index.html">
+                        <li class="nav-item d-flex flex-column align-items-center justify-content-center">
+                            <i class="fa-solid fa-house fa-2xl text-success pointer"></i>
+                            <a class="nav-link  mx-1 fw-bold" aria-current="page" href="../index.html">الرئيسية</a>
                         </li>
                     </a>
                 </ul>
@@ -92,7 +96,7 @@
                 <input class="form-control" type="tel" name="userPayment" id="userPayment" value="">
             </div>
 
-            <button type="submit" id="submitBtn" class=" btn btn-success w-100 mt-4">اتبرع الآن</button>
+            <button type="" id="paymentBtn" class=" btn btn-success w-100 mt-4">اتبرع الآن</button>
             <a href="allUsersForAdmin.html" class="w-100 mt-4 btn btn-danger">users</a>
         </form>
 
