--- a/index.html
+++ b/index.html
@@ -33,6 +33,9 @@
                     <li class="nav-item">
                         <a class="nav-link text- fw-bold" href="#footer"> تواصل معنا</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link text- fw-bold" href="src/success.html"> success </a>
+                    </li>
 
 
                 </ul>
