--- a/src/videos.html
+++ b/src/videos.html
@@ -11,14 +11,13 @@
     <link rel="stylesheet" href="css/rwd.css">
     <link rel="stylesheet" href="css/animate.css">
 
-    <title>Apoc 3939/اتبرع الآن </title>
+    <title>Apoc 3939/ الفيدوهات </title>
 </head>
 
 <body>
     <nav id="mainNav" class="navbar fixed- d- bg-white navbar-expand-lg top-0 start-0 end-0 bg-body-">
         <div data-wow-delay=".3s" class="container  bg-">
-            <a class="navbar-brand" href="../index.html"><img class="rounded-" src="images/logo-Apoc-2022.png"
-                    alt=""></a>
+            <a class="navbar-brand" href="../index.html"><img class="rounded-" src="images/logo-Apoc-2022.png" alt=""></a>
             <div class="collapse navbar-collapse d-flex align-items-center bg-" id="navbarSupportedContent">
                 <ul class="navbar-nav text-dark bg- mt-0 m-auto mb-2 mb-lg-0">
                     <li class="nav-item">
@@ -46,6 +45,7 @@
                 <ul class="navbar-nav me-auto mb-2 bg- mb-lg-0">
                     <a href="calculation.html">
                         <li class="nav-item d-flex flex-column align-items-center mx-2 justify-content-center">
+                            <!-- <i class="fa-solid fa-calculator fa-2x text-success pointer"></i> -->
                             <img class="icon-img rounded-circle" src="images/حاسبة-زكاة-المال.jpg" alt="">
                             <a class="nav-link  mx-1 fw-bold" aria-current="page" href="calculation.html">احسب
                                 زكاتك</a>
@@ -53,6 +53,7 @@
                     </a>
                     <a href="register.html">
                         <li class="nav-item d-flex flex-column align-items-center mx-2 justify-content-center">
+                            <!-- <i class="fa-solid fa-money-bill-trend-up fa-2x text-success pointer"></i> -->
                             <img class="icon-img rounded-circle" src="images/tbro3 8.jpg" alt="">
                             <a class="nav-link  mx-1 fw-bold" href="register.html">اتبرع الآن</a>
                         </li>
@@ -61,55 +62,53 @@
             </div>
         </div>
     </nav>
-
     <nav id="smNav" class="navbar d-none bg-white navbar-expand-lg top-0 start-0 end-0 bg-body-">
-        <div class="container  bg- d-flex flex-nowrap">
-            <a class="navbar-brand bg-" href="../index.html"><img class="rounded-" src="images/logo-Apoc-2022.png"
+        <div data-wow-delay=".3s" class="container d-flex justify-content-between wow fadeInDown bg-">
+            <a class="navbar-brand bg-" href="../index.html"><img class="rounded-circle" src="images/tbro3 9.jpg"
                     alt=""></a>
-            <div class="collapse navbar-collapse  d-flex align-items-center bg-" id="navbarSupportedContent">
-                <ul class="navbar-nav m-0 p-0 text-center bg- m-auto mb-2 bg- mb-lg-0">
+            <ul class="navbar-nav bg- d-flex align-items-center justify-content-between m-auto mb-lg-0">
+                <div class="bg w-">
                     <a href="../index.html">
-                        <li class="nav-item d-flex flex-column align-items-center mx-2 justify-content-center">
+                        <li class="nav-item d-flex flex-column align-items-center justify-content-center">
                             <i class="fa-solid fa-house fa-lg text-success pointer"></i>
                             <a class="nav-link  mx-1 fw-bold" aria-current="page" href="../index.html">الرئيسية</a>
                         </li>
                     </a>
+                </div>
+                <div class="bg- w-">
                     <a href="calculation.html">
-                        <li class="nav-item d-flex flex-column align-items-center mx-2 justify-content-center">
-                            <img class="icon-img rounded-circle" src="images/حاسبة-زكاة-المال.jpg" alt="">
-                            <a class="nav-link  mx-1 fw-bold" href="calculation.html"> احسب زكاتك </a>
+                        <li class="nav-item d-flex flex-column align-items-center justify-content-center">
+                            <i class="fa-solid fa-calculator fa-lg text-success pointer"></i>
+                            <a class="nav-link  mx-1 fw-bold" href="calculation.html"> احسب زكاتك</a>
                         </li>
                     </a>
-                </ul>
-            </div>
+                </div>
+            </ul>
         </div>
     </nav>
+   
 
-
-    <section class="bg-body-tertiary container d-flex justify-content-evenly m-auto p-4 rounded-3 shadow my-3 bg">
-        <form id="formFristRegister" class=" p-3 w-100">
-            <!-- <h3 class="text-center fs-2 fw-bolder border-bottom pb-3 border-3 my-2 text-success">اول مرة تسجل ؟؟</h3> -->
-            <div class="my-2">
-                <label for="userName" class="pb-1 fw-bold fs-5"> الاسم ثلاثي باللغة الانجليزية :</label>
-                <input class="form-control" type="text" name="userName" id="userName" value="">
+    <section class="my-5">
+        <div class="container">
+            <video muted controls autoplay src="images/video2.mp4" class="w-100"></video>
+            <div class="row my-3">
+                <div class="col-md-4">
+                    <div>
+                        <video controls muted src="images/video2.mp4" class="w-100"></video>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div>
+                        <video controls muted src="images/video2.mp4" class="w-100"></video>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div>
+                        <video controls muted src="images/video2.mp4" class="w-100"></video>
+                    </div>
+                </div>
             </div>
-            <div class="my-2">
-                <label for="userEmail" class="pb-1 fw-bold fs-5"> الايميل :</label>
-                <input class="form-control" type="email" name="userEmail" id="userEmail" value="">
-            </div>
-            <div class="my-2">
-                <label for="userPhone" class="pb-1 fw-bold fs-5"> رقم التليفون:</label>
-                <input class="form-control" type="tel" name="userPhone" id="userPhone" value="">
-            </div>
-            <div class="my-2">
-                <label for="userPayment" class="pb-1 fw-bold fs-5">قيمة التبرع:</label>
-                <input class="form-control" type="tel" name="userPayment" id="userPayment" value="">
-            </div>
-
-            <button type="" id="paymentBtn" class=" btn btn-success w-100 mt-4">اتبرع الآن</button>
-            <a href="allUsersForAdmin.html" class="w-100 mt-4 btn btn-danger">users</a>
-        </form>
-
+        </div>
     </section>
 
     <footer id="footer" class="w-100 py-5 bg-body-tertiary">
