--- a/src/photos.html
+++ b/src/photos.html
@@ -66,34 +66,35 @@
         </div>
     </nav>
     <nav id="smNav" class="navbar d-none bg-white navbar-expand-lg top-0 start-0 end-0 bg-body-">
-        <div data-wow-delay=".3s" class="container d-flex justify-content-between wow fadeInDown bg-">
-            <a class="navbar-brand bg-" href="../index.html"><img class="rounded-circle" src="images/tbro3 9.jpg"
+        <div class="container  bg- d-flex flex-nowrap">
+            <a class="navbar-brand bg-" href="../index.html"><img class="rounded-" src="images/logo-Apoc-2022.png"
                     alt=""></a>
-            <ul class="navbar-nav bg- d-flex align-items-center justify-content-between m-auto mb-lg-0">
-                <div class="bg w-">
-                    <a href="../index.html">
-                        <li class="nav-item d-flex flex-column align-items-center justify-content-center">
-                            <i class="fa-solid fa-house fa-lg text-success pointer"></i>
-                            <a class="nav-link  mx-1 fw-bold" aria-current="page" href="../index.html">الرئيسية</a>
-                        </li>
-                    </a>
-                </div>
-                <div class="bg- w-">
+            <div class="collapse navbar-collapse  d-flex align-items-center bg-" id="navbarSupportedContent">
+                <ul class="navbar-nav m-0 p-0 text-center bg- m-auto mb-2 bg- mb-lg-0">
                     <a href="calculation.html">
-                        <li class="nav-item d-flex flex-column align-items-center justify-content-center">
-                            <i class="fa-solid fa-calculator fa-lg text-success pointer"></i>
-                            <a class="nav-link  mx-1 fw-bold" href="calculation.html"> احسب زكاتك</a>
+                        <li class="nav-item d-flex flex-column align-items-center mx-2 justify-content-center">
+                            <!-- <i class="fa-solid fa-calculator fa-2x text-success pointer"></i> -->
+                            <img class="icon-img rounded-circle" src="images/حاسبة-زكاة-المال.jpg" alt="">
+                            <a class="nav-link  mx-1 fw-bold" aria-current="page" href="calculation.html">احسب
+                                زكاتك</a>
                         </li>
                     </a>
-                </div>
-            </ul>
+                    <a href="register.html">
+                        <li class="nav-item d-flex flex-column align-items-center mx-2 justify-content-center">
+                            <!-- <i class="fa-solid fa-money-bill-trend-up fa-2x text-success pointer"></i> -->
+                            <img class="icon-img rounded-circle" src="images/tbro3 8.jpg" alt="">
+                            <a class="nav-link  mx-1 fw-bold" href="register.html">اتبرع الآن</a>
+                        </li>
+                    </a>
+                </ul>
+            </div>
         </div>
     </nav>
    
 
     <section class="my-5">
         <div class="container">
-            <div class="row">
+            <div class="row g-3">
                 <div class="col-md-3">
                     <div>
                         <img class="rounded-2 w-100" src="images/slider 1.jpg" alt="">
