--- a/index.html
+++ b/index.html
@@ -654,7 +654,7 @@
         </div>
     </footer>
 
-
+<!-- <p>Lorem ipsum dolor sit.</p> -->
 
     <script src="src/js/bootstrap.bundle.min.js"></script>
     <script src="src/js/jquery-3.6.4.min.js"></script>
